--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./node_modules/vue/dist/vue.min.js"></script>
-  <script src="./button.js"></script>
   <style>
     *{ margin: 0; padding: 0; box-sizing: border-box }
     :root {
@@ -24,33 +22,13 @@
     }
   </style>
   <style>
-    .x-button {
-      padding: 0 1em;
-      font-size: var(--font-size);
-      height: var(--button-height);
-      border-radius: var(--border-radius);
-      background: var(--main-theme-color);
-      border: none;
-    }
-    .x-button:hover {
-      background: var(--main-hover-color);
-    }
-    .x-button:active {
-      background: var(--main-active-color);
-    }
-    .x-button:focus {
-      outline: none;
-    }
   </style>
 </head>
 <body>
   <div id="app">
     <x-button></x-button>
   </div>
-  <script>
-    new Vue ({
-      el: '#app'
-    })
+  <script src="./src/app.js">
   </script>
 </body>
 </html>
