按钮组件添加点击事件

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="http://at.alicdn.com/t/font_2229561_qraqv0dg8l.css">
   <title>Document</title>
   <style lang="less">
     * {
@@ -32,10 +31,10 @@
 </head>
 <body>
 <div id="app">
-  <x-button icon="setting">
+  <x-button icon="setting" :loading="loading1" @click="loading1 = !loading1">
     按钮
   </x-button>
-  <x-button>
+  <x-button :loading="true">
     按钮
   </x-button>
   <x-button icon="download" icon-position="right">
@@ -44,6 +43,6 @@
 </div>
 <script src="./src/app.js">
 </script>
-<script src="http://at.alicdn.com/t/font_2229561_lsldbe1gvv.js"></script>
+<script src="http://at.alicdn.com/t/font_2229561_w2o8xuodc0q.js"></script>
 </body>
 </html>
