检测button-group的子元素是否为x-button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
     按钮
   </x-button>
   <x-button-group>
-    <x-button icon="left">上一页</x-button>
+    <div>
+      <x-button icon="left">上一页</x-button>
+    </div>
+    <x-button>更多</x-button>
     <x-button icon="right" icon-position="right">下一页</x-button>
   </x-button-group>
 </div>
