--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
     按钮
   </x-button>
   <x-button-group>
-    <div>
-      <x-button icon="left">上一页</x-button>
-    </div>
+    <x-button icon="left">上一页</x-button>
     <x-button>更多</x-button>
     <x-button icon="right" icon-position="right">下一页</x-button>
   </x-button-group>
+  <div id="test"></div>
 </div>
 <script src="./src/app.js">
 </script>
