去除对iconfont的依赖

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 </div>
 <script src="./src/app.js">
 </script>
-<script src="http://at.alicdn.com/t/font_2229561_w2o8xuodc0q.js"></script>
+<!--<script src="http://at.alicdn.com/t/font_2229561_w2o8xuodc0q.js"></script>-->
 </body>
 </html>
