--- a/index.html
+++ b/index.html
@@ -35,24 +35,29 @@
 </head>
 <body>
 <div id="app">
-  <x-button icon="setting" :loading="loading1" @click="loading1 = !loading1">
-    按钮
-  </x-button>
-  <x-button :loading="true">
-    按钮
-  </x-button>
-  <x-button icon="download" icon-position="right">
-    按钮
-  </x-button>
-  <x-button-group>
-    <x-button icon="left">上一页</x-button>
-    <x-button>更多</x-button>
-    <x-button icon="right" icon-position="right">下一页</x-button>
-  </x-button-group>
-  <div id="test"></div>
+  <div style="margin: 10px">
+    <x-input value="123"></x-input>
+    <x-input value="234" disabled></x-input>
+    <x-input value="234" readonly></x-input>
+  </div>
+  <div>
+    <x-button icon="setting" :loading="loading1" @click="loading1 = !loading1">
+      按钮
+    </x-button>
+    <x-button :loading="true">
+      按钮
+    </x-button>
+    <x-button icon="download" icon-position="right">
+      按钮
+    </x-button>
+    <x-button-group>
+      <x-button icon="left">上一页</x-button>
+      <x-button>更多</x-button>
+      <x-button icon="right" icon-position="right">下一页</x-button>
+    </x-button-group>
+  </div>
 </div>
 <script src="./src/app.js">
 </script>
-<!--<script src="http://at.alicdn.com/t/font_2229561_w2o8xuodc0q.js"></script>-->
 </body>
 </html>
