input组件错误提示

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <x-input value="234" disabled></x-input>
     <x-input value="234" readonly></x-input>
   </div>
+  <div style="margin: 10px">
+    <x-input value="234" error="请输入"></x-input>
+  </div>
   <div>
     <x-button icon="setting" :loading="loading1" @click="loading1 = !loading1">
       按钮
