添加input有关props的测试用例

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </div>
   <div style="margin: 10px">
     <x-input value="234" error="请输入"></x-input>
+    <x-input value="234" @change="inputChange($event)"></x-input>
   </div>
   <div>
     <x-button icon="setting" :loading="loading1" @click="loading1 = !loading1">
