--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
 </head>
 <body>
 <div id="app">
+  <x-row>
+    <x-col>1</x-col>
+    <x-col>2</x-col>
+  </x-row>
+  <x-row>
+    <x-col>1</x-col>
+    <x-col>2</x-col>
+    <x-col>2</x-col>
+    <x-col>2</x-col>
+  </x-row>
+  <x-row>
+    <x-col :span="2">1</x-col>
+    <x-col :span="22">2</x-col>
+  </x-row>
+  <x-row>
+    <x-col :span="4">1</x-col>
+    <x-col :span="20">2</x-col>
+  </x-row>
   <div style="margin: 10px">
     <x-input value="123"></x-input>
     <x-input value="234" disabled></x-input>
