--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 </head>
 <body>
 <div id="app">
-  <x-row>
-    <x-col>1</x-col>
-    <x-col>2</x-col>
+  <x-row gutter="20">
+    <x-col span="2">1</x-col>
+    <x-col span="22">2</x-col>
   </x-row>
   <x-row>
     <x-col>1</x-col>
@@ -49,7 +49,7 @@
     <x-col :span="2">1</x-col>
     <x-col :span="22">2</x-col>
   </x-row>
-  <x-row>
+  <x-row :gutter="30">
     <x-col :span="4">1</x-col>
     <x-col :span="20">2</x-col>
   </x-row>
