重构row和col文件

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </x-row>
   <x-row>
     <x-col :span="2">1</x-col>
-    <x-col :span="22">2</x-col>
+    <x-col :span="20":offset="2">2</x-col>
   </x-row>
   <x-row :gutter="30">
     <x-col :span="4">1</x-col>
