--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <x-col span="2">1</x-col>
     <x-col span="22">2</x-col>
   </x-row>
-  <x-row>
+  <x-row align="right">
     <x-col>1</x-col>
     <x-col>2</x-col>
     <x-col>2</x-col>
