--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <x-col>2</x-col>
   </x-row>
   <x-row>
-    <x-col :span="2">1</x-col>
-    <x-col :span="20":offset="2">2</x-col>
+    <x-col :span="2" :phone="{ span: 11}">1</x-col>
+    <x-col :span="20":offset="2" :phone="{ span: 9, offset:2 }">2</x-col>
   </x-row>
   <x-row :gutter="30">
     <x-col :span="4">1</x-col>
