默认移动端 移动端优先

--- a/index.html
+++ b/index.html
@@ -43,24 +43,25 @@
 <body>
 <div id="app">
   <x-row>
-    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 8 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
-    <x-col :span="22" :offset="2" :ipad="{ span: 10, offset:2 }" :pc="{ span: 8 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
-    <x-col :span="22" :offset="2" :ipad="{ span: 10, offset:2 }" :pc="{ span: 8 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
-    <x-col :span="22" :offset="2" :ipad="{ span: 10, offset:2 }" :pc="{ span: 8 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
-    <x-col :span="22" :offset="2" :ipad="{ span: 10, offset:2 }" :pc="{ span: 8 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
-    <x-col :span="22" :offset="2" :ipad="{ span: 10, offset:2 }" :pc="{ span: 6, offset: 2 }">
+    <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
+
   </x-row>
 </div>
 <script src="./src/app.js">
