完成grid的测试用例

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <div id="app">
-  <x-row>
+  <x-row align="right">
     <x-col :span="24" :ipad="{ span: 12 }"  :pc="{ span: 4 }" :narrow-pc="{span: 8}" :wide-pc="{span: 2, offset: 2}">
       <div class="text-box"></div>
     </x-col>
