--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 <body>
 <div id="app">
   <x-container style="border: 1px solid red; height: 100vh">
-      <x-slider class="text-box">slider</x-slider>
-    <x-container>
     <x-header class="text-box">header</x-header>
+    <x-container>
+      <x-aside class="text-box">aside</x-aside>
       <x-main class="text-box">main</x-main>
-    <x-footer class="text-box">footer</x-footer>
     </x-container>
+    <x-footer class="text-box">footer</x-footer>
   </x-container>
 </div>
 <script src="./src/app.js">
