4种子元素的父组件只能是container, 加入width height属性

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .text-box {
       background: #eee;
       border: 1px solid #969799;
-      min-height: 100px;
+      //min-height: 100px;
     }
   </style>
 </head>
