更新了一下全局样式和图标

--- a/index.html
+++ b/index.html
@@ -42,14 +42,7 @@
 </head>
 <body>
 <div id="app">
-  <x-container style="border: 1px solid red; height: 100vh">
-    <x-header class="text-box">header</x-header>
-    <x-container>
-      <x-aside class="text-box">aside</x-aside>
-      <x-main class="text-box">main</x-main>
-    </x-container>
-    <x-footer class="text-box">footer</x-footer>
-  </x-container>
+  <x-button loading></x-button>
 </div>
 <script src="./src/app.js">
 </script>
