完成toast的测试用例

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 </head>
 <body>
 <div id="app">
-  <x-button @click="showToast">点我</x-button>
+  <x-tabs>
+    <x-tab>hh</x-tab>
+  </x-tabs>
 </div>
 <script src="./src/app.js">
 </script>
