tabs的基本结构和属性

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 </head>
 <body>
 <div id="app">
-  <x-tabs>
-    <x-tab>hh</x-tab>
+  <x-tabs v-model="active" tab-position="top" @change="changeTab">
+    <x-tab label="游戏" name="game">游戏</x-tab>
+    <x-tab label="音乐" name="music" disabled>音乐</x-tab>
+    <x-tab label="视频" name="video">视频</x-tab>
   </x-tabs>
 </div>
 <script src="./src/app.js">
