注入tabs组件的eventBus

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
 <div id="app">
   <x-tabs v-model="active" tab-position="top" @change="changeTab">
-    <x-tab label="游戏" name="game">游戏</x-tab>
-    <x-tab label="音乐" name="music" disabled>音乐</x-tab>
-    <x-tab label="视频" name="video">视频</x-tab>
+    <x-tab label="游戏" name="game">游戏内容</x-tab>
+    <x-tab label="音乐" name="music" disabled>音乐内容</x-tab>
+    <x-tab label="视频" name="video">视频内容</x-tab>
   </x-tabs>
 </div>
 <script src="./src/app.js">
