--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
 <body>
 <div id="app">
   <div class="source">
-    <x-tabs v-model="active" tab-position="top" @change="changeTab">
+    <x-tabs v-model="active" tab-position="left" @change="changeTab" style="height: 200px">
       <x-tab label="游戏" name="game">游戏内容</x-tab>
-      <x-tab label="音乐啊" name="music" disabled>音乐内容</x-tab>
+      <x-tab label="音乐啊" name="music">音乐内容</x-tab>
       <x-tab label="视频" name="video">视频内容</x-tab>
     </x-tabs>
+<!--    <x-tabs v-model="active" tab-position="right" @change="changeTab" style="height: 200px">-->
+<!--      <x-tab label="游戏" name="game">游戏内容</x-tab>-->
+<!--      <x-tab label="音乐啊" name="music">音乐内容</x-tab>-->
+<!--      <x-tab label="视频" name="video">视频内容</x-tab>-->
+<!--    </x-tabs>-->
   </div>
 </div>
 <script src="./src/app.js">
