--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <div id="app">
   <div class="source">
-    <div style="border: 1px solid black; overflow: hidden; padding: 3px;">
+    <div style="border: 1px solid black; overflow: hidden; padding: 3px;" @click="xxx">
       <x-popover>
         <template #content>pop over的内容哈哈哈</template>
         <x-button>点我</x-button>
