--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </style>
   <style lang="less">
     .source {
-      padding: 100px;
+      padding: 100px 300px;
       border: 1px solid #969799;
     }
   </style>
@@ -33,8 +33,8 @@
 <body>
 <div id="app">
   <div class="source">
-    <div style="border: 1px solid black; overflow: hidden; padding: 3px;" @click="xxx">
-      <x-popover>
+    <div @click="xxx">
+      <x-popover placement="top">
         <template #content>pop over的内容哈哈哈</template>
         <x-button>点我</x-button>
       </x-popover>
