popover content 四个方位的位置

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </style>
   <style lang="less">
     .source {
-      padding: 100px 300px;
+      padding: 200px;
       border: 1px solid #969799;
     }
   </style>
@@ -33,10 +33,22 @@
 <body>
 <div id="app">
   <div class="source">
-    <div @click="xxx">
+    <div @click="xxx" style=" width:400px">
+      <x-popover placement="left">
+        <template #content>pop over的内容哈哈哈</template>
+        <x-button>点我left</x-button>
+      </x-popover>
       <x-popover placement="top">
         <template #content>pop over的内容哈哈哈</template>
-        <x-button>点我</x-button>
+        <x-button>点我top</x-button>
+      </x-popover>
+      <x-popover placement="bottom">
+        <template #content>pop over的内容哈哈哈</template>
+        <x-button>点我bottom</x-button>
+      </x-popover>
+      <x-popover placement="right">
+        <template #content>pop over的内容哈哈哈</template>
+        <x-button>点我right</x-button>
       </x-popover>
     </div>
   </div>
